--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Weather App</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="main.js" defer></script>
+        <link rel="stylesheet" href="dist/style.css">
+        <script src="dist/main.js" defer></script>
     </head>
     <body>
         <div class="topBanner">
