--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="location">
                 <p id="location"></p>
-                <p id="time">Time</p>
+                <p id="time">Time:</p>
                 <div>
                     <input type="text" id="search">
                     <button id="searchButton">Go</button>
